logs/nts.log
Listing '.'...
Listing './bin'...
Compiling './bin/n.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/ez_setup.py'...
***   File "./lib/python3.5/site-packages/ez_setup.py", line 106
    except pkg_resources.VersionConflict, e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nts'...
Compiling './lib/python3.5/site-packages/nts/ntsData.py'...
***   File "./lib/python3.5/site-packages/nts/ntsData.py", line 65
    except URLError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nts/ntsRC.py'...
***   File "./lib/python3.5/site-packages/nts/ntsRC.py", line 76
    exec "res = %s" % defining_code
                  ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/nts/ntsWX.py'...
***   File "./lib/python3.5/site-packages/nts/ntsWX.py", line 381
    print "accepts focus?", self.editable
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nts-82.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
